<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menuItem" />

        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_account"
            android:title="@string/account_menuItem" />


    </group>


    <group android:checkableBehavior="single">

        <item android:title="@string/agenda_menuitem_Title">

            <menu>

                <item
                    android:id="@+id/budget"
                    android:icon="@drawable/ic_budget"
                    android:title="@string/budget_menuItem" />

                <item
                    android:id="@+id/reports"
                    android:icon="@drawable/ic_reports"
                    android:title="@string/generate_reports_menuItem" />


            </menu>

        </item>

    </group>


    <item android:title="@string/settings_menuItem_titile">

        <menu>

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout_menuItem" />



        </menu>

    </item>
    <item android:title="@string/communication_menuItem_Title">

        <menu>

            <item
                android:id="@+id/rateus"
                android:icon="@drawable/ic_rate"
                android:title="@string/rate_us_menuItem" />

            <item
                android:id="@+id/invite"
                android:icon="@drawable/ic_share"
                android:title="@string/invite_menuItem" />

        </menu>

    </item>


</menu>