<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.setting.SettingFragment">

    <TextView
        android:id="@+id/generalSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_settings_tv"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setLimit"
            style="@style/settingStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/set_expense_limit_textView"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EnterLimit"
            style="@style/settingStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/Hint_2000"
            android:background="@drawable/custom_input"
            android:hint="@string/Hint_2000"
            android:inputType="number"
            android:padding="2dp"
            android:textStyle="bold" />

        <ImageView
            style="@style/settingStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:src="@drawable/ic_done" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sendNotification"
            style="@style/settingStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/send_notification"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            style="@style/settingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/Textoff"
            android:textOn="@string/Texton"
            android:thumb="@drawable/selector"
            app:showText="true"
            app:track="@drawable/track" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set_Reminder_Tv"
            style="@style/settingStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/set_reminder_tv"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/accountSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_TV"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/changePassword"
        style="@style/settingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/change_password_TV"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deleteAccount"
        style="@style/settingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_tv"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:src="@drawable/ic_wallet_24" />

    <TextView
        style="@style/expenseManagementSystemH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/green_200"
        android:textStyle="bold" />


</LinearLayout>