<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.home.HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generateReport"
        android:layout_margin="5dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectNoOfDays"
            style="@style/expenseManagementSystemH2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filterMode" />

        <Spinner
            android:id="@+id/selectDaysSpinner"
            style="@style/expenseManagementSystemH2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/selectfilterMode"
            android:padding="10dp"
            android:popupBackground="@drawable/custom_background" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectDate"
            style="@style/expenseManagementSystemH2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectDateTV" />

        <TextView
            android:id="@+id/DateEntered"
            style="@style/expenseManagementSystemH2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/custom_input"
            android:hint="@string/_23_04_2021_date"
            android:autofillHints="@string/_23_04_2021_date" />


    </LinearLayout>

    <Button
        android:id="@+id/viewbyDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:text="@string/view_btn"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_details_TV"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalExpense"
            style="@style/expenseManagementSystemH2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/total_expense_calculated" />

        <TextView
            android:id="@+id/totalExpenseCalculated"
            style="@style/expenseManagementSystemH2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/custom_input"
            android:text="@string/Hint_2000" />


    </LinearLayout>

    <ListView
        android:id="@+id/viewList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:visibility="gone"
        />

</LinearLayout>
