<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.expense.ExpenseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/tv_expense_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense_note"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_add_expense"
                style="@style/expenseManagementSystemH2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_TV" />

            <EditText
                android:id="@+id/et_add_expense"
                style="@style/expenseManagementSystemH2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/Hint_2000"
                android:background="@drawable/custom_input"
                android:hint="@string/Hint_2000"
                android:inputType="number"
                android:padding="5dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_expense_category"
                style="@style/expenseManagementSystemH2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/resource_TV" />

            <Spinner
                android:id="@+id/spinner_expense_category"
                style="@style/expenseManagementSystemH2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:entries="@array/category"
                android:padding="5dp"
                android:popupBackground="@color/teal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_expense_resources"
                style="@style/expenseManagementSystemH2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/category_TV" />

            <Spinner
                android:id="@+id/spinner_expense_resource"
                style="@style/expenseManagementSystemH2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:entries="@array/Expense"
                android:padding="5dp"
                android:popupBackground="@color/teal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                style="@style/expenseManagementSystemH2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/date_TV" />

            <TextView
                android:id="@+id/tv_pick_date"
                style="@style/expenseManagementSystemH2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:padding="5dp"
                android:text="@string/choose_date_TV" />


        </LinearLayout>

        <EditText
            android:id="@+id/et_comment"
            style="@style/expenseManagementSystemH2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/details_of_expense_ET"
            android:background="@drawable/custom_input"
            android:hint="@string/details_of_expense_ET"
            android:inputType="textAutoCorrect"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/comment_note"
            android:textColor="@color/green" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_expense"
            style="@style/expenseManagementSystemH2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:text="@string/income_save_btn"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:src="@drawable/ic_wallet_24" />

        <TextView
            style="@style/expenseManagementSystemH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#A4FDF6"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>