<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_current_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/enter_current_password_ET"
        android:background="@drawable/custom_input"
        android:hint="@string/enter_current_password_ET"
        android:inputType="textWebPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/enter_new_password_ET"
        android:background="@drawable/custom_input"
        android:hint="@string/enter_new_password_ET"
        android:inputType="textWebPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/confirmPasswordET"
        android:background="@drawable/custom_input"
        android:hint="@string/confirmPasswordET"
        android:inputType="textWebPassword"
        android:padding="10dp" />

</LinearLayout>